# ATX

./: .gitignore  .travis.yml  ABOUT.rst  API.md  CHANGELOG  DESIGN.md  HISTORY.md  INSTALL_MAC.md  INSTALL_WINDOWS.md  LICENSE  MANIFEST.in  README.md  README.rst  README_ADVANCED.md  README_IOS.md  README_IOS_QUICKSTART.md  README_IOS_WDA.md  TODO  TODO.md  appveyor.yml  build.sh  publish.sh  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
airtest/: __init__.py  __main__.py  base.py  console.py  consts.py  device.py  devsuit.py  errors.py  jsonlog.py  patch.py  proto.py  testapi.sh
atx/: __init__.py  __main__.py  adb.py  adb2.py  android_device.py  apkparse.py  base.py  check.sh  comtools.py  console.py  consts.py  cron.py  device.py  devsuit.py  dummy_device.py  errors.py  image.py  imutils.py  interface.txt  ioskit.py  log2html.py  logutils.py  patch.py  strutils.py  tkgui.py  windevice.py  windows_device.py
docs/: API.md  Makefile  QUICKSTART.md  conf.py  index.rst  make.bat  usage.rst
scripts/: 100-lines-tcp-proxy.py  README.md  adb_old.py  airtest_recoder.py  androaxml.py  compile.sh  gui1.py  image.py  install-minicap.py  install.py  mac_install.sh  monitor.py  monkey_playback.py  monkey_recorder.py  pixelmatch.py  py-interpreter.py  run.bat  runxinput.bat  simple-ide.py  simple-tcp-proxy.py  surfaceflinger-fps.py  test-insert-code.py  tkgui.py
test/: requirements.txt  runtest.sh  test_android.py  test_dummy.py  test_image.py
tests/: .fsw.yml  README.md  README.txt  requirements.txt  runtest.sh  test.py  test_android.py  test_base.py  (+17 more)
(+148 files in other folders)
