[metadata]
name = airtest
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Automation test library for android based on opencv
license = MIT
description-file = 
	README.rst
home-page = https://github.com/codeskyblue/airtest
requires-python = >=2.7
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages =
	airtest
