[metadata]
name = atx
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Automation test library for android based on opencv
license = Apache
description-file = 
	ABOUT.rst
home-page = https://github.com/codeskyblue/AirtestX
requires-python = >=2.7,<=3.5
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5

[files]
packages =
	atx
